--- a/.qmake.conf
+++ b/.qmake.conf
@@ -2,4 +2,7 @@ load(qt_build_config)
 CONFIG += qt_example_installs
 CONFIG += warning_clean
 
+QMAKE_CXXFLAGS += -DTESTBINDIR=\\\"$$PWD/bin\\\"
+QMAKE_CXXFLAGS += -DTESTEXAMPLEDIR=\\\"$$PWD/examples\\\"
+
 MODULE_VERSION = 5.6.1
